shrink header image and fix margin formatting for text columns on mobile view

--- a/css/m-onepage.css
+++ b/css/m-onepage.css
@@ -9,12 +9,6 @@ body {
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
-.publications ul li {
-    text-align:left;
-    list-style-type:none;
-    padding-bottom: 15px;
-}
-
 .text-muted {
     color: #777;
 }
@@ -292,8 +286,8 @@ background: rgba(255,255,255,.1);
 }
 
 .navbar-default .navbar-toggle {
-    border-color: #336699;
-    background-color: #336699;
+    border-color: #003366;
+    background-color: #003366;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
@@ -303,6 +297,7 @@ background: rgba(255,255,255,.1);
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
     background-color: #336699;
+    border-color:#336699;
 }
 
 .navbar-default .nav li a {
@@ -466,6 +461,12 @@ section h3.section-subheading {
 
 .team-member p {
     margin-top: 0;
+}
+
+@media {
+    .stackedbox{
+        padding-bottom: 50px;
+    }
 }
 
 section#contact {
